--- a/04HTML5Tables/01SimpleTable.html
+++ b/04HTML5Tables/01SimpleTable.html
@@ -11,7 +11,7 @@
             <th colspan="2">Software University</th>
         </tr>
         <tr>
-            <td><div id="logo"></div></td>
+            <td><a href="https://softuni.bg/"><div id="logo"></div></a></td>
             <td>
                 <span>Accessible and high quality software education.</span>
                 <span>Our mission is to make people we train true professionals in the software industry and support them in finding employment.</span>
