--- a/06HTML5Forms/02FlightOrder.html
+++ b/06HTML5Forms/02FlightOrder.html
@@ -3,7 +3,7 @@
 <head lang="en">
     <meta charset="UTF-8">
     <link rel="stylesheet" href="styles/02FlightOrder.css"/>
-    <title></title>
+    <title>Flight Order</title>
 </head>
 <body>
 <main>
