Web Fundamentals Homework

--- a/07CSSLayout/01WebsiteHeader.html
+++ b/07CSSLayout/01WebsiteHeader.html
@@ -75,7 +75,7 @@
                 </li>
                 <li><a href="#">For companies</a></li>
                 <li><a href="#">Forum</a></li>
-                <li><a href="https://softuni.bg/contacts">Contacts</a></li>
+                <li><a href="https://softuni.bg/contacts" target="_blank">Contacts</a></li>
             </ul>
         </section>
     </header>
