--- a/08SemanticHTMLandOtherTags/04BGJUGWebPageWithFrames.html
+++ b/08SemanticHTMLandOtherTags/04BGJUGWebPageWithFrames.html
@@ -1,10 +1,9 @@
 <!DOCTYPE html>
 <html>
-<head lang="en">
-    <meta charset="UTF-8">
-    <title>BG JUG WebPage With Frames</title>
-</head>
-<body>
-
-</body>
+    <title>BGJUG - Bulgarian Java User Group</title>
+    <frameset rows="120, *, 220" frameborder="0" border="0" framespacing="0">
+        <frame src="frames/header.html" />
+        <frame src="frames/main.html" />
+        <frame src="frames/footer.html">
+    </frameset>
 </html>
