Web Fundamentals Practice

--- a/Practice/01HTML-CSS-Exam-6-July-2014/Problem-2-Lorem-Ipsum-Site/index.html
+++ b/Practice/01HTML-CSS-Exam-6-July-2014/Problem-2-Lorem-Ipsum-Site/index.html
@@ -3,7 +3,7 @@
 <head lang="en">
     <meta charset="UTF-8">
     <link rel="stylesheet" href="styles/styles.css"/>
-    <title></title>
+    <title>Lorem Ipsum Site</title>
 </head>
 <body>
     <div id="wrapper">
