--- a/Practice/01HTML-CSS-Exam-6-July-2014/Problem-4-Responsive-Web-Site/index.html
+++ b/Practice/01HTML-CSS-Exam-6-July-2014/Problem-4-Responsive-Web-Site/index.html
@@ -55,7 +55,8 @@
 				
 				</article>
 		</div>
-			
+
+		<div class="aside">
 				<aside class="top-sidebar">
 					<article>
 					<h2>Top Sidebar</h2>
@@ -75,7 +76,9 @@
 					<h2>Bottom Sidebar</h2>
 					<p>Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur.</p>
 				    </article>
-				</aside>	
+				</aside>
+        </div>
+
 	</div>
 	
 	<footer class="mainFooter">
