Web Fundamentals Practice

--- a/Practice/02HTML-CSS-Exam-7-July-2014/Problem-3-Contact-Form/index.html
+++ b/Practice/02HTML-CSS-Exam-7-July-2014/Problem-3-Contact-Form/index.html
@@ -6,22 +6,22 @@
     <title>Contact Form</title>
 </head>
 <body>
-<img id="envelope-top" src="images/envelope-top.png" />
-<img id="envelope-bottom" src="images/envelope-bottom.png" />
-    <form action="#">
-        <header><h1>Send a Message</h1></header>
+    <main>
         <section>
-            <h2>Hello</h2>
-                <label for="message">Your message</label>
-                <textarea id="message" rows="4" cols="50"></textarea>
-            <h2>Best</h2>
-                <label for="name">Name</label><input id="name" type="text"/>
-                <label for="email">Email</label><input id="email" type="email"/>
-            <div>
-                <button>Send Message</button>
-            </div>
+            <header><h1>Send a Message</h1></header>
+            <form action="#">
+                <h2>Hello,</h2>
+                    <label for="message">Your message</label>
+                    <textarea id="message" rows="4" cols="50"></textarea>
+                <h2>Best,</h2>
+                    <label for="name">Name</label><input id="name" type="text"/>
+                    <label for="email">Email</label><input id="email" type="email"/>
+                <div>
+                    <button>Send Message</button>
+                </div>
+            </form>
         </section>
-    </form>
-
+        <section></section>
+    </main>
 </body>
 </html>
