--- a/Practice/02HTML-CSS-Exam-7-July-2014/Problem-4-Responsive-Web-Site/index.html
+++ b/Practice/02HTML-CSS-Exam-7-July-2014/Problem-4-Responsive-Web-Site/index.html
@@ -8,6 +8,7 @@
     <link href='http://fonts.googleapis.com/css?family=Lato:300' rel='stylesheet' type='text/css'>
     <link href='http://fonts.googleapis.com/css?family=Lobster+Two:400' rel='stylesheet' type='text/css'>
     <link rel="stylesheet" href="styles.css">
+    <link rel="stylesheet" href="styles/responsive.css"/>
 </head>
 
 <body class="home">
