Web Fundamentals Practice

--- a/Practice/04HTML-CSS-Exam-2-Sept-2014/Problem-2-Corporate-Site/index.html
+++ b/Practice/04HTML-CSS-Exam-2-Sept-2014/Problem-2-Corporate-Site/index.html
@@ -7,7 +7,7 @@
 </head>
 <body>
     <header>
-        <a href="#"><img src="images/logo.png" alt="logo"/></a>
+        <a class="tilt" href="#"><img src="images/logo.png" alt="logo"/></a>
         <nav>
             <ul>
                 <li><a href="#">HOME</a></li>
@@ -31,22 +31,20 @@
     </section>
     <section id="bottom">
         <h2>Key functionalities of our solution</h2>
-        <article>
+        <article onclick="location.href='#';">
             <h3>Search</h3>
             <p>We provide fast search anywhere in our product catalog.</p>
-            <a href="#">Find out more &#62;&#62;</a>
+            <a href="#">Find out more &raquo;</a>
         </article>
-        <article>
+        <article onclick="location.href='#';">
             <h3>Navigation</h3>
-
             <p>Great navigation services, maps and route options, designed for any device.</p>
-            <a href="#">Find out more &#62;&#62;</a>
+            <a href="#">Find out more &raquo;</a>
         </article>
-        <article>
+        <article onclick="location.href='#';">
             <h3>Shopping</h3>
-
             <p>Create your own online store with integrated checkout and shipping system.</p>
-            <a href="#">Find out more &#62;&#62;</a>
+            <a href="#">Find out more &raquo;</a>
         </article>
     </section>
     <footer>
