--- a/Homework/05JavaScriptDOM&Events/02DisplayDIVsContent/index.html
+++ b/Homework/05JavaScriptDOM&Events/02DisplayDIVsContent/index.html
@@ -2,7 +2,7 @@
 <html>
 <head lang="en">
     <meta charset="UTF-8">
-    <title></title>
+    <title>Display DIVs Content</title>
 </head>
 <body>
     <div>first div</div>
