--- a/Homework/04-JavaScript-Design-Patterns-Homework/01-TODO-List-Module/TODO-List-Module.html
+++ b/Homework/04-JavaScript-Design-Patterns-Homework/01-TODO-List-Module/TODO-List-Module.html
@@ -7,6 +7,9 @@
 </head>
 <body>
 
+<script src="scripts/container.js"></script>
+<script src="scripts/section.js"></script>
+<script src="scripts/item.js"></script>
 <script src="scripts/TODO-List-Module.js"></script>
 </body>
 </html>
