Refactor lab 01 Poppy

--- a/Labs/Advanced-JS-Lab-Poppy/Skeleton/index.html
+++ b/Labs/Advanced-JS-Lab-Poppy/Skeleton/index.html
@@ -14,6 +14,7 @@ under the MIT license
 </head>
 <body>
 
+    <script src="helper/extensions.js"></script>
 	<script src="poppy/view-factory.js"></script>
 	<script src="poppy/data.js"></script>
 	<script src="poppy/core.js"></script>
