--- a/Homework/02-Controllers-and-Markup-Homework/01-Video-system/index.html
+++ b/Homework/02-Controllers-and-Markup-Homework/01-Video-system/index.html
@@ -7,6 +7,6 @@
     <script src="scripts/libs/RequireJS-2.1.17-min.js" data-main="scripts/main"></script>
 </head>
 <body>
-<div ng-view></div>
+<div class="wrapper" ng-view></div>
 </body>
 </html>
