Test HTML5 mode

--- a/index.html
+++ b/index.html
@@ -11,6 +11,7 @@
         <link rel="stylesheet" href="css/style.css"/>
         <link rel="stylesheet" href="css/style-desktop.css"/>
     </noscript>
+    <!--<base href="/ibook/"/>-->
 </head>
 <body>
 <div ng-view>
